# recodestl

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  coverage.xml  pyproject.toml  pytest.ini  test_converter.py
docs/: IMPLEMENTATION_STATUS.md  testing_best_practices.md
recodestl/: __main__.py
recodestl/cli/: __init__.py  app.py
recodestl/core/: __init__.py  config.py  converter.py  exceptions.py
recodestl/execution/: __init__.py  cadquery_exec.py  sandbox.py
recodestl/processing/: __init__.py  mesh_loader.py  preprocessor.py  validator.py
recodestl/sampling/: __init__.py  adaptive.py  base.py  factory.py  poisson.py  uniform.py
recodestl/utils/: __init__.py  cache.py  logging.py
recodestl/visualization/: __init__.py  point_cloud.py
tests/: conftest.py
tests/integration/: test_sonos_mount.py
tests/unit/: test_cache.py  test_logging.py  test_mesh_loader.py  test_sampling.py  test_visualization.py
