[project]
name = "recodestl"
version = "0.1.0"
description = "Convert STL files to parametric CAD models using CAD-Recode neural model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.47.0",
    "trimesh>=4.0.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "scipy>=1.14.0",
    "tqdm>=4.66.0",
    "structlog>=24.0.0",
    "point-cloud-utils>=0.30.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "rich>=13.7.0",
    "diskcache>=5.6.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "accelerate>=1.8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
recodestl = "recodestl.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "UP", "C90", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
